# DesignPattern

./: .travis.yml  README.md  test.sh
Iterator/src/: Aggregate.h  Book.h  BookShelf.h  BookShelfIterator.h  CMakeLists.txt  Iterator.h
Iterator/test/: BookShelfIteratorTest.cpp  BookShelfTest.cpp  CMakeLists.txt
src/Iterator/: Aggregate.h  Aggregate.hpp  Book.h  Book.hpp  BookShelf.cpp  BookShelf.h  BookShelf.hpp  BookShelfIterator.h  BookShelfIterator.hpp  Iterator.h  Iterator.hpp
tools/gtest/: CMakeLists.txt
